I resolved some spacing issue

--- a/mobile-style.css
+++ b/mobile-style.css
@@ -45,7 +45,7 @@
   }
   
   .my-projects {
-    grid-template: repeat(6, max(350px, 35vw)) / 1fr;
+    grid-template: repeat(6, max(320px, 30vw)) / 1fr;
     row-gap: 2rem;
   }
   
