--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ address {
   }
   
   .my-projects {
-    grid-template: repeat(3, max(380px, 28vh)) / repeat(2, 1fr);
+    grid-template: repeat(3, max(400px, 30vw)) / repeat(2, 1fr);
     z-index: 2;
   }
   
